--- a/codegeneration/templates/api_client.mustache
+++ b/codegeneration/templates/api_client.mustache
@@ -1,7 +1,9 @@
 # coding: utf-8
+
 {{>partial_header}}
 from __future__ import absolute_import
 
+import sys
 import atexit
 import datetime
 from dateutil.parser import parse
@@ -23,6 +25,11 @@ from {{packageName}}.configuration import Configuration
 import {{modelPackage}}
 from {{packageName}} import rest
 from {{packageName}}.exceptions import ApiValueError, ApiException
+
+try:
+    basestring
+except NameError:
+    basestring = str
 
 
 class ApiClient(object):
@@ -341,7 +348,7 @@ class ApiClient(object):
                     klass = getattr({{modelPackage}}, klass)
                 except AttributeError as err:
                     orig_klass = klass
-                    if isinstance(data, str):
+                    if isinstance(data, basestring):
                         klass = six.text_type
                     if isinstance(data, list):
                         klass = list
@@ -420,21 +427,25 @@ class ApiClient(object):
                                    _preload_content, _request_timeout, _host,
                                    _request_auth)
 
-        return self.pool.apply_async(self.__call_api, (resource_path,
-                                                       method, path_params,
-                                                       query_params,
-                                                       header_params, body,
-                                                       post_params, files,
-                                                       response_types_map,
-                                                       auth_settings,
-                                                       _return_http_data_only,
-                                                       collection_formats,
-                                                       _preload_content,
-                                                       _request_timeout,
-                                                       _host, _request_auth),
-                                     {},
-                                    callback,
-                                    err_callback)
+        if sys.version[0] == "3":
+            # Only Python 3 supports err_callback
+            apply_async_args = (self.__call_api,
+                                (resource_path, method, path_params, query_params,
+                                header_params, body, post_params, files, response_types_map,
+                                auth_settings, _return_http_data_only, collection_formats,
+                                 _preload_content, _request_timeout, _host, _request_auth),
+                                {},
+                                callback,
+                                err_callback)
+        else:
+            apply_async_args = (self.__call_api,
+                                (resource_path, method, path_params, query_params,
+                                 header_params, body, post_params, files, response_types_map,
+                                 auth_settings, _return_http_data_only, collection_formats,
+                                 _preload_content, _request_timeout, _host, _request_auth),
+                                {},
+                                callback)
+        return self.pool.apply_async(*apply_async_args)
 
     def request(self, method, url, query_params=None, headers=None,
                 post_params=None, body=None, _preload_content=True,
