--- a/codegeneration/templates/api_client.mustache
+++ b/codegeneration/templates/api_client.mustache
@@ -3,7 +3,6 @@
 {{>partial_header}}
 from __future__ import absolute_import
 
-import sys
 import atexit
 import datetime
 from dateutil.parser import parse
@@ -427,7 +426,7 @@ class ApiClient(object):
                                    _preload_content, _request_timeout, _host,
                                    _request_auth)
 
-        if sys.version[0] == "3":
+        if six.PY3:
             # Only Python 3 supports err_callback
             apply_async_args = (self.__call_api,
                                 (resource_path, method, path_params, query_params,
